# pace

./: CHARTER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TRUST.md  index.html  manifest.webmanifest  package-lock.json  package.json  playwright.config.js  sw.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_decision.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: calibration.js  tracker.css  tracker.js  tray-format.js  tray.js  window.js
apps/tray/: .gitignore  README.md  build-ui.mjs  package.json  sync-version.mjs
apps/tray/sensor-rs/: Cargo.toml
apps/tray/sensor-rs/src/: lib.rs
apps/tray/sensor-rs/tests/: parity.rs
apps/tray/src-tauri/: Cargo.toml  tauri.conf.json
apps/tray/src-tauri/src/: lib.rs  main.rs
docs/design/: calibration.md  tray-sensor.md
e2e/: a11y.spec.js  clear-data.spec.js  sensor-import.spec.js  staleness.spec.js
scripts/: gen-expected.mjs  make-icon.mjs
sensors/: claude-code.mjs  parse-transcripts.mjs  weights.mjs
src/: pace.js
test/: calibration.test.js  pace.edges.test.js  pace.test.js  sensor.test.js  smoke.test.js  tray-format.test.js  trust.test.js  window.test.js
test/fixtures/claude-code/: expected.json  week-main.jsonl  week-other.jsonl
