[package]
name = "pace-tray"
version = "0.2.0"
description = "Pace — ambient AI usage meter (tray app)"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pace-sensor = { path = "../sensor-rs" }

[lib]
name = "pace_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
